# Orby

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup_helper.py
orby/: __init__.py  backend.py  backends.py  cli.py  config.py  prompt_manager.py
orby/agents/: __init__.py
orby/commands/: __init__.py  chat.py  config.py  enhanced.py  memory.py  models.py  prompt.py  run.py
orby/core/: __init__.py  core.py
orby/live_mode/: __init__.py
orby/memory/: __init__.py  context_manager.py  memory_db.py
orby/model_management/: __init__.py
orby/plugins/: __init__.py
orby/tools/: __init__.py  code.py  file.py  registry.py  shell.py  vision.py  voice.py  web.py
orby/tui/: __init__.py  app.py  command_palette.py  history.py  orby_tui.css  themes.py  thinking_widget.py
orby/ui/: __init__.py  dashboard.py  enhanced_ui.py
orby/utils/: benchmark.py  rag.py  session.py
orby/utils/detection/: __init__.py
orby_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
